examples/datalog/21_query_features/09_computed_filter.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_comp_filt
Knowledge graph 'test_comp_filt' created.
Switched to knowledge graph: test_comp_filt
> .kg use test_comp_filt
Switched to knowledge graph: test_comp_filt
> +items[(1, 10), (2, 20), (3, 30), (4, 40)].
Inserted 4 fact(s) into 'items'.
> doubled_above_50(Id, D) :- items(Id, Val), D = Val * 2, D > 50.
Script error: Query execution failed: Unsafe rule: Atom { relation: "doubled_above_50", args: [Variable("Id"), Variable("D")] }. Variables ["D"] in head do not appear in positive body atoms.
